feat(frontend) : fetch berita & detail berita feat(backend) : add route getUserById
