# rpl-api/app/Models/User.php
@@ -22,7 +22,8 @@ class User extends Authenticatable
         'email',
         'password',
         'role_id',
-        'status_id'
+        'status_id',
+        'profile_picture'
     ];
 
     /**
